// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Using createLucideIcon > should create a component from an iconNode 1`] = `
<svg
  aria-hidden="true"
  class="lucide lucide-air-vent"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
  />
  <path
    d="M6 8h12"
  />
  <path
    d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"
  />
  <path
    d="M6.6 15.6A2 2 0 1 0 10 17v-5"
  />
</svg>
`;

exports[`Using createLucideIcon > should create a component from an iconNode with iconName 1`] = `
<svg
  aria-hidden="true"
  class="lucide lucide-air-vent"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
  />
  <path
    d="M6 8h12"
  />
  <path
    d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"
  />
  <path
    d="M6.6 15.6A2 2 0 1 0 10 17v-5"
  />
</svg>
`;

exports[`Using createLucideIcon > should include backwards compatible className 1`] = `
<svg
  aria-hidden="true"
  class="lucide lucide-layout2 lucide-layout-2"
  fill="none"
  height="24"
  stroke="currentColor"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="2"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M6 12H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"
  />
  <path
    d="M6 8h12"
  />
  <path
    d="M18.3 17.7a2.5 2.5 0 0 1-3.16 3.83 2.53 2.53 0 0 1-1.14-2V12"
  />
  <path
    d="M6.6 15.6A2 2 0 1 0 10 17v-5"
  />
</svg>
`;
